Fix/db abs img vulns (#5845)
* upgrade db abstractor to use java 17 and struts 6

* [remove commit] temp

* modify prod yml to supprot java 17

* modify dockerfile

* fix

* remove unused dep

* resolve comments

* revert test changes

* revert test changes

* revert test changes